--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,9 @@
 body
 {
-
-    color : #333;
-
- 
-
+    background: #1e1f24;
+    color: #333;
     text-align: center;
-    font-family: Courier;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -14,27 +11,34 @@ body
 
 #cabecera
 {
-    background: #33A;
-    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.75);
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
+
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
-
 }
 
 #container h1
@@ -43,5 +47,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
